examples/test/testpolicy17756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17756
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key40: value26
      key6: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value8
          key47: value25
      podSelector:
        matchLabels:
          key35: value13
          key12: value42
